<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoActivity">

    <ImageView
        android:id="@+id/decor_background"
        android:layout_width="195sp"
        android:layout_height="195dp"
        android:layout_marginEnd="-60dp"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/link"
        app:srcCompat="@drawable/bot_borderless" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <ImageView
        android:id="@+id/closeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="closeActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_close_24" />


    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:autoLink="web"
        android:fontFamily="@font/varela_round"
        android:text="@string/link"
        android:textColorLink="#D8B569"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/app_ver"
        app:layout_constraintStart_toStartOf="@+id/logo" />

    <TextView
        android:id="@+id/app_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/ver"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/credit_developer"
        app:layout_constraintStart_toStartOf="@+id/logo" />

    <TextView
        android:id="@+id/credit_developer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/developed_credit"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/credit_powered"
        app:layout_constraintStart_toStartOf="@+id/logo" />

    <TextView
        android:id="@+id/credit_powered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="130dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/powered_credit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>