<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#515151"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#5A5A5A"
        android:gravity="center"
        android:isScrollContainer="false"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/SettingsHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/varela_round"
            android:text="@string/SettingsHeader"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/userSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading">

        <TextView
            android:id="@+id/user_option_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/varela_round"
            android:text="@string/user_avatar_header"
            android:textColor="#D6D6D6"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/user_option_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:checked="true"
            android:onClick="switchOnOff"
            android:switchPadding="10dp"
            android:text="@string/default_toggle"
            android:textAllCaps="false"
            android:textColor="#D6D6D6"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_imageview"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/user_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/user_option_textview"
            app:layout_constraintTop_toBottomOf="@+id/user_option_textview" />

        <Button
            android:id="@+id/user_select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:onClick="selectUserImage"
            android:text="@string/select_image_btnText"
            app:layout_constraintBottom_toBottomOf="@+id/user_imageview"
            app:layout_constraintStart_toEndOf="@+id/user_imageview" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/botSetting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.3"
        android:background="#4C4C4C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userSetting">

        <TextView
            android:id="@+id/bot_option_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/varela_round"
            android:text="@string/bot_avatar_header"
            android:textColor="#D6D6D6"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/bot_option_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:checked="true"
            android:onClick="switchOnOff"
            android:switchPadding="10dp"
            android:text="@string/default_toggle"
            android:textAllCaps="false"
            android:textColor="#D6D6D6"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/bot_imageview"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/bot_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/bot_option_textview"
            app:layout_constraintTop_toBottomOf="@+id/bot_option_textview" />

        <Button
            android:id="@+id/bot_select_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:onClick="selectBotImage"
            android:text="@string/select_image_btnText"
            app:layout_constraintBottom_toBottomOf="@+id/bot_imageview"
            app:layout_constraintStart_toEndOf="@+id/bot_imageview" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/save_btn_desc"
        android:onClick="saveConfig"
        android:scaleType="centerCrop"
        app:fabCustomSize="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="35dp"
        app:srcCompat="@drawable/ic_baseline_save_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/Clear_logs_header"
        android:textColor="#D6D6D6"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botSetting" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/clear_log_body"
        android:textColor="#D6D6D6"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/clearLogsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:backgroundTint="#FF5858"
        android:onClick="clearRecords"
        android:text="@string/Clear_logs_header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>